Add more forms (date, dropdown) and working on employees page, and fixed modal width and position

--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "js-cookie": "^2.2.1",
     "react": "^16.12.0",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
     "react-particles-js": "^2.7.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-select": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
