--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "google-map-react": "^1.1.5",
     "js-cookie": "^2.2.1",
     "react": "^16.12.0",
     "react-datepicker": "^2.10.1",
